<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.dieta.Inputs$PlaceholderFragment" >

    <TextView
        android:id="@+id/title_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_input" >
    </TextView>
    
    <EditText 
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:inputType="text">
    </EditText>
    
    <EditText 
        android:id="@+id/years"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_years"
        android:inputType="number">
    </EditText>
    
    <EditText 
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_weight"
        android:inputType="number">
    </EditText>
    
    <EditText 
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_height"
        android:inputType="number">
    </EditText>
    
    <RadioGroup 
        android:id="@+id/radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <RadioButton
            android:id="@+id/lose"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/lose_weight" />
        <RadioButton
            android:id="@+id/gain"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/gain_weight" />
    </RadioGroup>
    
    <Button 
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:onClick="next">
    </Button>

</LinearLayout>
